# DorianValle

./: .gitignore  CMakeLists.txt  README.md  main.c  test.c
.github/workflows/: build.yml
include/: buffer.c  buffer.h  hello_world.c  linked_list.h  math.c  math.h  string.c  string.h  test.c  v3.c  v3.h
test/: main.c  main.h  string.c  string.h  test.h  v3.c  v3.h
test/inout/: expected  in
